# gpt2_experiment

./: pyproject.toml
docs/: gpt_extend_training_walkthrough.md  qa_evaluation_results.md  training_session_summary.md
extend/: gpt_extend.py  interactive_qa.py  pretrain_mlm.py  train_squad.py
gpt2/: generate.py  model.py  plot.py  train.py
scratch/: check_basic.py  check_logits.py  check_no_pt.py  check_offsets_relativity.py  check_single.py  check_single_seq.py  check_span_indices.py  check_squad.py  check_squad_targets.py  evaluate_val.py  inspect_tokenizer.py  test_hf_name.py
