[project]
name = "llm-training-workshop"
version = "0.1.0"
description = "Train a GPT from scratch on a MacBook"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "huggingface-hub>=1.8.0",
    "numpy>=2.0.2",
    "tiktoken>=0.12.0",
    "torch>=2.8.0",
    "tqdm>=4.67.3",
    "matplotlib>=3.10.0",
    "transformers>=5.9.0",
]
